Animated, contacts block, footer, all - finished

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<!-- Connect Slick -->
 	<link rel="stylesheet" href="plugins/slick/slick.css">
 	<link rel="stylesheet" href="plugins/slick/slick-theme.css">
+	<!-- Connact Revealator -->
+	<link rel="stylesheet" href="plugins/revealator/fm.revealator.jquery.min.css">
+	<script src="plugins/revealator/fm.revealator.jquery.min.js"></script>
 </head>
 
 <body>
@@ -29,12 +32,25 @@
 				<a href="https://www.instagram.com/yan_loytosh/" target="_blank"><img src="img/ico/instagram.png" alt="instagram" width="23px" align="center"></a>
 				<a href="https://t.me/yan_loytosh" target="_blank"><img src="img/ico/telegram.png" alt="telegram" width="23px" align="center"></a>
 			</div>
-
 		</div><!--header-->
+		<div class="contact_hidden">
+				<span>
+					<a class="con_decor" href="https://www.instagram.com/yan_loytosh/" target="_blank">Instagram: <i>@yan_loytosh</i></a>
+				</span><br>
+				<span>
+					<a class="con_decor" href="https://t.me/yan_loytosh" target="_blank">Telegram: <i>@yan_loytosh</i></a>
+				</span><br>
+				<span>
+					Kyivstar: <i>+380987873993</i>
+				</span><br>
+				<span>
+					Life: <i>+380933010431</i>
+				</span>
+			</div>
 	</header>
 
 	<section class="section1">
-		<div class="info">
+		<div class="info revealator-slideup revealator-delay1 revealator-once revealator-once">
 			<picture>
 				<source srcset="img/avatar.webp" type="image/webp">
 				<img class="avatar" src="img/avatar.jpg" width="209px" alt="avatar">
@@ -53,13 +69,13 @@
 		</div>
 
 		<div class="container2">
-			<div><i>1. </i> Відразу берусь до роботи.</div>
-			<div><i>2. </i> Пишу грамотний код.</div>
-			<div><i>3. </i> Легкість та доступність сайту.</div>
-			<div><i>4. </i> Адапивність на всіх пристроях.</div>
-			<div><i>5. </i> Легка та зручна адмінка.</div>
-			<div><i>6. </i> Зроблю макет сайту (якщо нема).</div>
-			<div><i>7. </i> <span id="red_line">Гарантії </span> ?! Все що не сподобається, переробляю !</div>
+			<div class="revealator-slideleft revealator-duration8 revealator-once"><i>1. </i> Відразу берусь до роботи.</div>
+			<div class="revealator-slideright revealator-duration8 revealator-once"><i>2. </i> Пишу грамотний код.</div>
+			<div class="revealator-slideleft revealator-duration8 revealator-once"><i>3. </i> Легкість та доступність сайту.</div>
+			<div class="revealator-slideright revealator-duration8 revealator-once"><i>4. </i> Адапивність на всіх пристроях.</div>
+			<div class="revealator-slideleft revealator-duration8 revealator-once"><i>5. </i> Легка та зручна адмінка.</div>
+			<div class="revealator-slideright revealator-duration8 revealator-once"><i>6. </i> Зроблю макет сайту (якщо нема).</div>
+			<div class="revealator-slideleft revealator-duration8 revealator-once"><i>7. </i> <span id="red_line">Гарантії </span> ?! Все що не сподобається, переробляю !</div>
 		</div>
 	</section><!--section2-->
 
@@ -71,21 +87,21 @@
 		<div class="container3">
 
 			<div class="work_first">
-				<div class="container3_item">
+				<div class="container3_item revealator-slideright revealator-once revealator-duration10">
 					<div class="container3_img">
 						<a href="sites/singlepage/index.html" target="_blank"><img class="con3img" src="img/sites/singlepage.jpg"></a>
 					</div>
 					<span class="w_title">single page</span>
 				</div>
 
-				<div class="container3_item">
+				<div class="container3_item revealator-slideright revealator-once revealator-delay1 revealator-duration10">
 					<div class="container3_img">
 						<a href="sites/singlepage/index.html" target="_blank"><img class="con3img" src="img/sites/singlepage.jpg"></a>
 					</div>
 					<span class="w_title">single page</span>
 				</div>
 
-				<div class="container3_item">
+				<div class="container3_item revealator-slideright revealator-once revealator-delay2 revealator-duration10">
 					<div class="container3_img">
 						<a href="sites/singlepage/index.html" target="_blank"><img class="con3img" src="img/sites/singlepage.jpg"></a>
 					</div>
@@ -93,7 +109,7 @@
 				</div>
 			</div><!--work_first-->
 
-			<div class="work_second">
+			<div class="work_second revealator-slideright revealator-once revealator-duration10">
 				<div class="container3_item">
 					<div class="container3_img">
 						<a href="sites/singlepage/index.html" target="_blank"><img class="con3img" src="img/sites/singlepage.jpg"></a>
@@ -101,14 +117,14 @@
 					<span class="w_title">single page</span>
 				</div>
 
-				<div class="container3_item">
+				<div class="container3_item revealator-slideright revealator-once revealator-delay1 revealator-duration10">
 					<div class="container3_img">
 						<a href="sites/singlepage/index.html" target="_blank"><img class="con3img" src="img/sites/singlepage.jpg"></a>
 					</div>
 					<span class="w_title">single page</span>
 				</div>
 
-				<div class="container3_item">
+				<div class="container3_item revealator-slideright revealator-once revealator-delay2 revealator-duration10">
 					<div class="container3_img">
 						<a href="sites/singlepage/index.html" target="_blank"><img class="con3img" src="img/sites/singlepage.jpg"></a>
 					</div>
@@ -124,7 +140,7 @@
 		</div>
 
 		<div class="container4">
-			<div class="slider">
+			<div class="slider revealator-zoomin revealator-once">
 				<div>
 					<div class="slide"> <!-- max symbol 150 -->
 						<img class="clients_img" src="http://via.placeholder.com/126">
@@ -154,6 +170,9 @@
 				<span>Kyivstar: <i>+380987873993</i></span>
 				<span>Life: <i>+380933010431</i></span>
 			</p>
+		</div> <!-- ./footer_text2 -->
+		<div>
+			<span id="time"></span> <!-- time -->
 		</div>
 	</footer>
 	<script src="script/script.js"></script> <!-- My Script -->
